--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/public/watermark.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simplifixr - Your Trusted Service Partner</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDoA0Tm4J5P1P5UFvR3wXLVjki1ECShUMw&callback=initMap" async defer></script>
